--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@
 }
 
 .wrapper {
-    width: 100vw;
+    width: 100%;
     height: 3rem;
     background-color: #006fdc;
 }
@@ -36,7 +36,7 @@
 }
 
 .header {
-    width: 100vw;
+    width: 100%;
     height: 8.5rem;
 }
 
@@ -115,16 +115,22 @@
     width: 50%;
 }
 
+.slide-section {
+    width: 100%;
+    height: 70rem;
+    display: block;
+}
+
 .slideshow-container {
     position: relative;
-    width: 100vw;
-    height: 70rem;
+    width: 100%;
+    height: 100%;
 }
 
 .buttons {
     height: auto;
     position: absolute;
-    top: 65%;
+    top: 70%;
     left: 50%;
     transform: translate(-50%, 50%);
     z-index: 1;
@@ -226,12 +232,180 @@
     background-color: transparent
 }
 
+.frame-section {
+    width: 100%;
+    height: 42rem;
+    display: block;
+    position: relative;
+}
+
+.div {
+    height: 100%;
+    padding: 0 !important;
+    position: absolute;
+    top: -30%;
+    left: 12.5%;;
+}
+
+.div > .card {
+    width: auto;
+    height: 45rem;
+    border-radius: 5px !important;
+    box-shadow: 5px 10px 27px -9px rgba(75, 58, 58, 0.2);
+}
+
+.card > .card-img-top {
+    width: 30rem;
+    height: 20rem;
+    background-size: cover;
+    background-position: center;
+    margin: 2rem;
+    margin-bottom: 0;
+}
+.card > .card-body {
+    width: 30rem;
+    height: auto;
+    text-align: center;
+    margin: 2rem;
+    margin-top: 0;
+}
+
+.card .card-body > .card-title {
+    font-size: 1.8rem;
+    color: #000;
+    font-weight: 400;
+    padding: 0.5rem !important;
+    margin: 0.5rem !important;
+}
+
+.card .card-body > .card-text {
+    font-size: 1.4rem;
+    color: gray;
+    font-weight: 400;
+    padding: 0.5rem !important;
+    margin: 0 0.5rem !important;
+}
+
+.card .card-body > .btn-primary {
+    font-size: 1.3rem;
+    color: #1089ff;
+    text-transform: uppercase;
+    letter-spacing: 0.25rem;
+    border: 1px solid #1089ff;
+    border-radius: 5px;
+    background-color: #FFF;
+    padding: 1rem 2rem;
+    margin: 1rem;
+}
+
+.card .card-body > .btn-primary:hover {
+    color: #FFF;
+    background-color: #1089ff;
+}
+
+.article {
+    width: 100%;
+    height: 60rem;
+    background-color: #f8f9fd;
+}
+
+.article .container {
+    height: 100%;
+    padding: 0;
+}
+
+.article .container .card {
+    width: 100%;
+    height: 100%;
+    border: 0;
+}
+
+.article .container .card .row{
+    width: 100%;
+    height: 100%;
+}
+
+.card .row > .image {
+    width: 100%;
+    height: 100%;
+    padding: 4rem !important;
+}
+
+.card .row > .content {
+    width: 100%;
+    height: 100%;
+    padding-left: 4rem !important;
+    padding-right: 4rem !important;
+    background-color: #f8f9fd !important;
+}
+
+.content > .title-content {
+    font-size: 1.2rem;
+    display: block;
+    font-weight: 600;
+    color: #1089ff;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    padding-top: 5rem;
+}
+
+.content > .head-content {
+    font-size: 2.4rem;
+    font-weight: 600;
+    display: block !important;
+    color: rgba(0,0,0,.8);
+    padding-top: 2rem;
+    padding-bottom: 5rem;
+}
+
+.content > .body-content {
+    font-size: 1.4rem;
+    line-height: 1.8;
+    font-weight: 400;
+    color: gray;
+    padding:  0.5rem 0;
+}
+
+.content .author {
+    width: 100%;
+    height: 7rem;
+    padding-top: 8rem;
+    display: flex;
+    align-items: center;
+}
+
+.content .author .img {
+    width: 7rem;
+    height: 7rem;
+    border-radius: 50%;
+    margin-right: 1rem;
+}
+
+.content .author .infor {
+    width: auto;
+    margin-left: 1rem;
+}
+
+.content .author .infor .name {
+    font-size: 1.8rem;
+    line-height: 1.25;
+    color: rgba(0,0,0,.8);
+    font-weight: 400;
+}
+
+.content .author .infor .description {
+    font-size: 1.4rem;
+    line-height: 1.25;
+    font-weight: 400;
+    color: gray;
+}
+
 @keyframes animation {
     from {
-        opacity: 0.1;
+        opacity: 0.4;
     }
     25% {
-        opacity: 0.95;
+        opacity: 0.9;
     }
     to {
         opacity: 1;
