Add servises card

--- a/styles/style.css
+++ b/styles/style.css
@@ -156,7 +156,7 @@
     height: 70rem;
     background-size: cover;
     background-position: center;
-    animation: animation 3s;
+    animation: animation 0.8s;
 }
 
 .caption {
@@ -339,7 +339,7 @@
     background-color: #f8f9fd !important;
 }
 
-.content > .title-content {
+.title-content {
     font-size: 1.2rem;
     display: block;
     font-weight: 600;
@@ -347,18 +347,20 @@
     text-transform: uppercase;
     letter-spacing: 2px;
     padding-top: 5rem;
+    text-shadow: 0 0 2px rgba(16, 137, 255, 0.2);
 }
 
-.content > .head-content {
+.head-content {
     font-size: 2.4rem;
     font-weight: 600;
     display: block !important;
     color: rgba(0,0,0,.8);
     padding-top: 2rem;
     padding-bottom: 5rem;
+    text-shadow: 0 0 2px rgba(0, 0, 0, 0.2);
 }
 
-.content > .body-content {
+.body-content {
     font-size: 1.4rem;
     line-height: 1.8;
     font-weight: 400;
@@ -400,14 +402,160 @@
     color: gray;
 }
 
+.services-section {
+    width: 100%;
+    height: 28rem;  
+}
+
+.services-section {
+    text-align: center;
+    background-color: #1089ff;
+    letter-spacing: 0.5px;
+}  
+
+.title-service {
+    color: #FFF;
+    font-size: 2rem;
+    font-weight: 500;
+    margin-top: 5rem;
+}  
+
+
+.services-section .service .content-service {
+    font-size: 1.4rem;
+    font-weight: 400;
+    color: rgba(255,255,255,.9);
+    margin: 3rem 5rem;
+} 
+
+.services-section .service .quote-service a{
+    font-size: 1.2rem;
+    font-weight: 500;
+    text-transform: uppercase;
+    color: rgba(255,255,255,.9);
+    letter-spacing: 2px;
+    border-bottom: 2px solid rgba(255,255,255,.3);
+} 
+
+.services-section .service .quote-service a:hover {
+    text-decoration: none;
+}
+.services-section .consultation {
+    background-color: #006fdc;
+}
+
+.services-section .consultation > .form {
+    margin: 4rem 4rem 4rem 2rem;
+}
+
+.consultation .form div div {
+    margin-bottom: 1rem;
+}
+
+div .form-control {
+    height: 4rem;
+    width: 20rem;
+    font-size: 1.4rem;
+    color: rgba(255,255,255,.9)!important;
+    border-bottom: 1px solid rgba(255,255,255,.2)!important;
+}
+
+div .form-control:focus {
+    font-size: 1.4rem;
+    color: rgba(255,255,255,.9)!important;
+    box-shadow: none;
+}
+
+::placeholder {
+    color: rgba(255,255,255,.9)!important;
+    font-size: 1.4rem;
+
+}
+.form div .select-option {
+    font-size: 1.4rem;
+    height: 4rem;
+    width: 20rem;
+    color: rgba(255,255,255,.9)!important;
+    border-bottom: 1px solid rgba(255,255,255,.2)!important;
+}
+
+div .select-option:focus {
+    font-size: 1.4rem;
+    color: rgba(255,255,255,.9)!important;
+    outline: none;
+}
+
+.form div > .btn {
+    font-size: 1.1rem;
+    color: #000;
+    border-radius: 5px;
+    padding: 0.75rem 4rem;
+    background-color: #FFF;
+    border: 1px solid #FFF;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+}
+
+.form div > .btn:hover {
+    color: rgba(255,255,255,.9);
+    background: transparent;
+}
+
+.orther-services {
+    height: 60rem;
+    display: block;
+}
+
+.title-orther-services {
+    padding-top: 5rem;
+    text-align: center;
+    margin-bottom: 10rem;
+}
+
+.orther-services .container .card {
+    text-align: center;
+    position: relative;
+}
+
+.orther-services .container .card h5 {
+    font-size: 1.8rem;
+    font-weight: 400;
+    color: rgba(0, 0, 0, 0.9);
+    letter-spacing: 0.5px;
+    padding: 0.5rem;
+    margin: 0.5rem;
+}
+
+.orther-services .container .card p {
+    font-size: 1.4rem;
+    color: gray;
+    letter-spacing: 0.5px;
+    padding: 0.5rem 2rem;
+    margin: 0.5rem;
+}
+
+.orther-services .container .card:before {
+    content: '\f022';
+    font-family: "FontAwesome";
+    font-size: 4.5rem;
+    color: #FFF;
+    border-radius: 50%;
+    background-color: #a3cb4c;
+    width: 7rem;
+    height: 7rem;
+    position: absolute;
+    top: -80%;
+    left: 50%;
+    transform: translate(-50%, 50%);
+}
+
 @keyframes animation {
     from {
-        opacity: 0.4;
-    }
-    25% {
-        opacity: 0.9;
+        opacity: 0;
+        transform: scale(0.99);
     }
     to {
         opacity: 1;
+        transform: scale(1);
     }
 }
