--- a/styles/style.css
+++ b/styles/style.css
@@ -157,6 +157,7 @@
     background-size: cover;
     background-position: center;
     animation: animation 0.8s;
+    position: relative;
 }
 
 .caption {
@@ -166,8 +167,9 @@
 
 
 .caption-position--left  {
-    top: 30%;
+    top: 40%;
     left: 15%;
+    transition: 0.5s ease;
 }
 
 .caption-position--right  {
@@ -309,34 +311,34 @@
     background-color: #f8f9fd;
 }
 
-.article .container {
+.article .containers {
     height: 100%;
     padding: 0;
 }
-
-.article .container .card {
+.containers .card {
     width: 100%;
     height: 100%;
     border: 0;
+    margin-bottom: 0 !important;
 }
 
-.article .container .card .row{
+.containers .card .row{
     width: 100%;
     height: 100%;
 }
 
-.card .row > .image {
+.containers .card .row > .image {
     width: 100%;
-    height: 100%;
+    height: 60rem;
     padding: 4rem !important;
 }
 
-.card .row > .content {
+.containers .card .row > .content {
     width: 100%;
     height: 100%;
     padding-left: 4rem !important;
     padding-right: 4rem !important;
-    background-color: #f8f9fd !important;
+    background-color: #f8f9fd;
 }
 
 .title-content {
@@ -509,7 +511,7 @@ div .select-option:focus {
 .title-orther-services {
     padding-top: 5rem;
     text-align: center;
-    margin-bottom: 10rem;
+    margin-bottom: 5rem;
 }
 
 .orther-services .container .card {
@@ -547,6 +549,118 @@ div .select-option:focus {
     top: -80%;
     left: 50%;
     transform: translate(-50%, 50%);
+}
+
+.story-section {
+    height: auto;
+    display: block;
+    background-color: #f8f9fd;
+    position: relative;
+}
+.fa-chevron-left, .fa-chevron-right {
+    font-size: 2rem;
+    color: gray;
+    position: absolute;
+    top: 62%;
+    transform: translate(-50%, 50%);
+    transition: 0.5s ease;
+    cursor: pointer;
+}
+
+.fa-chevron-left {
+    left: 12%;
+}
+
+.fa-chevron-right {
+    right: 11%;
+}
+
+.fa-chevron-left:hover, .fa-chevron-right:hover {
+    color: #1089ff;
+}
+
+.items {
+    width: 120rem;
+    margin: auto;
+}
+
+.items:hover .fa-chevron-left {
+    left: 10%;
+}
+
+.items:hover .fa-chevron-right {
+    right: 9.5%;
+}
+
+.cosutation {
+    width: 100%;
+    height: 20rem;
+    background-image: url("/images/image-8.jpg");
+    background-size: cover;
+    background-attachment: fixed;
+    display: block;
+    position: relative;
+}
+
+.cosutation .container {
+    height: 100%;
+    padding: 0;
+    position: relative;
+    z-index: 9999;
+}
+
+.container .wrap {
+    display: flex;
+    align-items: center;
+}
+
+.container .wrap .text {
+    flex-basis: 800px;
+}
+
+.cosutation h1 {
+    font-size: 3.5rem;
+    font-weight: 400;
+    color: #FFF;
+    letter-spacing: 0.5px;
+    margin-left: 8rem;
+}
+.cosutation p {
+    font-size: 1.4rem;
+    color: rgba(255,255,255,.8);
+    margin-left: 8rem;
+}
+.cosutation .span {
+    position: absolute;
+    right: 7%;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.cosutation .span .btn-secondary {
+    font-size: 1.1rem;
+    color: #4d4d4d;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    padding: 1.5rem 3rem;
+    border: 1px solid #FFF;
+    background-color: #FFF;
+}
+
+.cosutation .span .btn-secondary:hover {
+    color: #FFF;
+    background-color: transparent;
+}
+
+.overlay {
+    width: 100%;
+    height: 100%;
+    opacity: 0.7;
+    background: #1089ff;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 @keyframes animation {
