--- a/styles/style.css
+++ b/styles/style.css
@@ -747,6 +747,99 @@ div .select-option:focus {
     background-color: transparent;
 }
 
+.news-section {
+    padding: 0;
+    padding-bottom: 20rem;
+    margin: 0;
+    display: block;
+    width: 100%;
+}
+
+.box-news {
+    padding-top: 5rem;
+    text-align: center;
+    margin-bottom: 5rem;
+}
+
+.box-news .head-news {
+    font-size: 2.4rem;
+    font-weight: 600;
+    display: block !important;
+    color: rgba(0,0,0,.8);
+    padding-top: 4rem;
+    padding-bottom: 2rem;
+    text-shadow: 0 0 2px rgba(0, 0, 0, 0.2);
+}
+
+.box-news .title-news {
+    font-size: 1.2rem;
+    display: block;
+    font-weight: 600;
+    color: #1089ff;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    padding-top: 0;
+    text-shadow: 0 0 2px rgba(16, 137, 255, 0.2);
+}
+
+.news-section .new {
+    padding: 0;
+    margin: auto;
+}
+
+.news-section .new .new-img {
+    height: 25rem;
+    border-radius: 5px;
+    background-size: cover;
+    background-position: center;
+    cursor: pointer;
+}
+
+.new .note {
+    font-size: 1.4rem;
+    font-weight: 450;
+    margin: 1rem 0;
+    display: block;
+    background: transparent;
+}
+
+.new .note a:nth-child(1), .new .note a:nth-child(2) {
+    color: gray;
+}
+
+.new .note a:nth-child(1):hover, .new .note a:nth-child(2):hover, .new .note a:nth-child(3):hover{
+    transition: 0.5s ease;
+    text-decoration: none;
+    color: #000;
+}
+
+.new .note a:nth-child(2){
+    margin: 0 1rem;
+}
+
+.new .note a:nth-child(3){
+    color: #a3cb4c;
+}
+
+.new .caption {
+    font-size: 1.8rem;
+    font-weight: 450;
+    width: 100%;
+    display: block;
+    letter-spacing: 0.5px;
+}
+
+.new .caption > a{
+    color: #000;
+    background: transparent;
+}
+
+.new .caption > a:hover{
+    transition: 0.3s ease;
+    color: #1089ff;
+    text-decoration: none;
+}
+
 @keyframes animation {
     from {
         opacity: 0;
