--- a/styles/style.css
+++ b/styles/style.css
@@ -468,10 +468,9 @@ div .form-control:focus {
     box-shadow: none;
 }
 
-::placeholder {
+.form ::placeholder {
     color: rgba(255,255,255,.9)!important;
     font-size: 1.4rem;
-
 }
 .form div .select-option {
     font-size: 1.4rem;
@@ -838,6 +837,160 @@ div .select-option:focus {
     transition: 0.3s ease;
     color: #1089ff;
     text-decoration: none;
+}
+
+.footer {
+    color: rgba(255, 255, 255, 0.3);
+    padding-top: 12rem;
+    margin: 0;
+    width: 100%;
+    height: 45rem;
+    background: #131719;
+    position: relative;
+}
+
+
+.footer .container:nth-child(1){
+    height: 50%;
+    padding: 0;
+}
+
+.footer .footer-title {
+    color: #FFF;
+    font-size: 2.2rem;
+    font-weight: 600;
+    margin: 0 0 2rem 0;
+    position: relative;
+}
+.footer .footer-title > span {
+    color: #a3cb4c;
+    position: absolute;
+}
+
+.footer .footer-title ~ a {
+    color: #1089ff;
+    font-size: 1.5rem;
+    
+}
+
+.footer .footer-title ~ a:hover {
+    text-decoration: none;
+}
+
+.footer .footer-content {
+    font-weight: 400;
+    font-size: 1.5rem;
+    max-width: 30rem;
+    margin: 2rem 0;
+}
+
+.footer-services {
+    border-left: 1px solid rgba(255, 255, 255, 0.1);
+    max-height: 19rem;
+    padding: 0 1.8rem;
+    display: flex;
+    flex-direction: column;
+}
+
+.footer-services .services-title {
+    color: #FFF;
+    font-size: 2rem;
+    font-weight: 400;
+    margin: 0 0 2rem 0;
+}
+
+.footer-services .services-title  ~ a {
+    color: rgba(255, 255, 255, 0.3);
+    font-weight: 400;
+    font-size: 1.5rem;
+    margin: 0.5rem 0;
+    transition: 0.3s all ease;
+}
+
+.footer-services .services-title  ~ a:hover {
+    color: #FFF;
+    text-decoration: none;
+}
+
+.footer .container:nth-child(2){
+    padding: 0 1.5rem;
+    font-size: 1.5rem;
+    margin: 5rem auto;
+}
+
+.footer .container:nth-child(2) .col-7 > a {
+    color: #1089ff;
+}
+.footer .container:nth-child(2) .col-7 >    a:hover {
+    text-decoration: none;
+}
+
+.footer .container:nth-child(2) .col-5 {
+    text-align: end;
+    padding-right: 4rem;
+}
+
+.footer .container:nth-child(2) .col-5 > a {
+    font-size: 1.5rem;
+    color: rgba(255, 255, 255, 0.3);
+    margin: 0 1rem;
+    transition: 0.3s all ease;
+}
+
+.footer .container:nth-child(2) .col-5 > a:hover {
+    color: #FFF;
+    text-decoration: none;
+}
+
+.footer .input-group {
+    width: 50rem;
+    height: 5rem;
+    background-color: #FFF;
+    border-radius: 5px;
+    position: absolute;
+    top: -11%;
+    left: 50%;
+    transform: translate(-50%, 50%);
+}
+.footer .input-group input {
+    width: 70%;
+    color: rgba(0, 0, 0, 0.3);
+    font-size: 1.8rem;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border: 0;
+    padding-left: 2rem;
+    outline: none;
+}
+
+.footer .input-group ::placeholder {
+    color: rgba(0, 0, 0, 0.3);
+    font-size: 1.8rem;
+    background: #FFF;
+}
+
+.footer .input-groupinput, .footer .subscribe .button {
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+.footer .input-group .button {
+    color: #FFF;
+    background-color: #a3cb4c;
+    font-size: 1.4rem;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    width: 30%;
+    height: 100%;
+    border-radius: 5px;
+    border: 0;
+    outline: none !important;
+}
+.footer .input-group .button:active {
+    border: 0;
+    outline: none;
 }
 
 @keyframes animation {
